--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
     }
 </script>
 <!-- ngView: --><ng-view autoscroll="true" class="ng-scope"><div class="tribe-home ng-scope"><header><div><div class="tribe-header-image ng-scope" ng-controller="HeaderImageController"></div><div class="tribe-logo"><a class="icon-sprite_tomi-opensource-logo" href="."></a><section class="tribe-menu"><div><div class="tribe-collapsed-menu"><i class="fa fa-bars"></i></div><ul><li><a href="projects/">projects</a></li><li><a href="contributors/">contributors</a></li><li><a href="http://www.tomitribe.com">sponsor</a></li></ul></div></section></div><section class="tribe-page-title"><h1>Welcome to the</h1><h1><span>Tomitribe Community</span></h1><h4>A trove of tribe tools &amp; projects for your java applications</h4></section></div></header><section class="tribe-projects ng-scope" ng-controller="ProjectsCarousselController"><div><div class="tribe-section-separator"></div><h1>BECAUSE THAT'S WHAT WE DO</h1><p>A community dedicated to uniting developers and neat tools to promote a healthy ecosystem around Apache
-TomEE, Java EE and Java Open Source in general.</p></div><div data-tribe-projects-carousel="data-tribe-projects-carousel"><div class="icon-sprite_arrow"></div><div class="tribe-projects-caroussel"><div><!-- ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/crest"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+TomEE, Java EE and Java Open Source in general.</p></div><div data-tribe-projects-carousel="data-tribe-projects-carousel"><div class="icon-sprite_arrow"></div><div class="tribe-projects-caroussel"><div><!-- ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/crest/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -415,7 +415,7 @@ zB2WCsXfaMjkYCfdVbUJDQl/C0XzJ1qCMty9i8SI4lpmDeLK2oQ6MIWqDEdJ
 T1H6g8yeisX8jB+gaGuzK1x7TBBPIkoLkShSk4w7RGKc5NpigngyUWgt/GzR
 VyFQNpGPPSF7ulsShMHwFPAoFoPBBGEw7MP/CzAARXa/N/Q3vIMAAAAASUVO
 RK5CYII=
-"></div><h3 class="ng-binding">crest</h3><p class="ng-binding">Simplifies Java command-line tool writing with built-in Command-registration, help text and validation.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sheldon"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">crest</h3><p class="ng-binding">Simplifies Java command-line tool writing with built-in Command-registration, help text and validation.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sheldon/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -945,7 +945,7 @@ NtpmRD4hYupYW1y7YR5en5KDGumW0JsEk81yIi+Z4HI4dT6OEOMmrVmqYlka
 UcJYooQacDqmTx1P3dKpimXJatdhsmlD5F0idyWedofIO0TaUnJQFcuaehNn
 shkJlavBenEcglF+C4h8Q5MnUBXLmomCeUonERlBBNOh4EqZq4ksIcTIoTWk
 MYJQUFgTqA1CQUEJQkFhGP5fgAEAmEXNRg3xkYYAAAAASUVORK5CYII=
-"></div><h3 class="ng-binding">sheldon</h3><p class="ng-binding">Provide administrators with an interactive Java EE shell environment that can be accessed via SSH.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/hodao"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">sheldon</h3><p class="ng-binding">Provide administrators with an interactive Java EE shell environment that can be accessed via SSH.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/hodao/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1109,7 +1109,7 @@ OGO7DlryMNLOcBnUJGrx0nDwHyTj6e2timpIbe0C2nX/Lo2X4MIdbLNihBw7
 9mdq2t6kVTuktzfg/EKREhrCM/pZvofoHYEmQeXUeKyASIXXELq1ug5LHow7
 IbCtD5Hv57Z/T77d0zSRCq+f5k09l6KuDoR70/8EGACsLB9oc97LwgAAAABJ
 RU5ErkJggg==
-"></div><h3 class="ng-binding">hodao</h3><p class="ng-binding">Provides helpful libraries for Data Access Object (DAO) persistence code; inspired by the Apache TomEE abstract-bean concept.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/beryllium"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">hodao</h3><p class="ng-binding">Provides helpful libraries for Data Access Object (DAO) persistence code; inspired by the Apache TomEE abstract-bean concept.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/beryllium/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1429,7 +1429,7 @@ OCgj8yqyNpBJK3JMI7wfMuzkd5ze5JfGImQPYNKZHwEAQB7MDwIABAIAgEAA
 gEAAgEAAgEAAgEAAgEAAgEAAgEAAgEAAgEAAABAIABAIABAIABAIABAIABAI
 ABAIABAIABAIAAACAQACAQACAQACAQACAQACAQACAQACAQACAQACAQCo+X8B
 BgB5SgQqU/qGtAAAAABJRU5ErkJggg==
-"></div><h3 class="ng-binding">beryllium</h3><p class="ng-binding">Cucumber-based functional testing for REST API, Database setup, external service mocks and redis setup/assertions.  Beryllium is an essential element to anything awesome!</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sabot"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">beryllium</h3><p class="ng-binding">Cucumber-based functional testing for REST API, Database setup, external service mocks and redis setup/assertions.  Beryllium is an essential element to anything awesome!</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sabot/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1861,7 +1861,7 @@ c/uwvFh/q+TA7AgCoQ7yEW4nlhcK/f7F2r+sAYig54T4gcDwQ9xeLC8S+ntk
 Zf8n3QgCSH4WP3qL1xpuN5YXCP28d2W/ryMfU6odcyGuA/oP7CF+jKocVa4V
 Lw4IZ7m7SsVrt3ght+0KAcbO2gdUTz/l403pK1ksa8WAsFgMCIvFgLBYDAiL
 xYCwWC6i/xdgAHsV6nFCLvBTAAAAAElFTkSuQmCC
-"></div><h3 class="ng-binding">sabot</h3><p class="ng-binding">Allows extremely precise configuration injection of  environment-aware Contexts and Dependency Injection (CDI) Extensions into applications.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/swizzle"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">sabot</h3><p class="ng-binding">Allows extremely precise configuration injection of  environment-aware Contexts and Dependency Injection (CDI) Extensions into applications.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/swizzle/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2137,7 +2137,7 @@ tHXrm7Rl8xZqbm4ezG19lcHw3GnMSEfD6llpu3kqknczgFUCitX7O/Km2gJt
 1B6MuTDcJdzngzLxLCUpDCwBLpQlXD7EKeBBv2F9xG4bMxWwYotZi9D3DwIs
 rBpjHQ6VUhrUI1Ucy/AiNFutCj4sFr8iuv0Q65PxrpSiJLUsFuQ+0pdgfsr6
 goohKYulRIlh+X8BBgAehQP1sO+/tAAAAABJRU5ErkJggg==
-"></div><h3 class="ng-binding">swizzle</h3><p class="ng-binding">Stream editor implemented as a series of InputStream and OutputStream filters. Like the unix sed and can manipulate an endless stream with little memory.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/tomee-jaxrs-starter-project"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">swizzle</h3><p class="ng-binding">Stream editor implemented as a series of InputStream and OutputStream filters. Like the unix sed and can manipulate an endless stream with little memory.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/tomee-jaxrs-starter-project/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2405,7 +2405,7 @@ C/fztUBr3/z/wGBkVRNGljWQlZ2DkLC/FELKAtWcTdDMJ39RpnEFJxjb1kZG
 Zla5nyGKyFIIUaAQohCiQCFEIUSBQohCiALFMSwibibn4eDpJwWeegrz1C9w
 T10hpIyw73g2b/k4WdAUkaVAIUQhREEp4v8CDACU51L83bdKZgAAAABJRU5E
 rkJggg==
-"></div><h3 class="ng-binding">tomee-jaxrs-starter-project</h3><p class="ng-binding">Know JAX-RS, but haven't yet dug into Apache TomEE? Way too busy or impatient to read documentation? This example repo is for you.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sheldon-starter-project"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">tomee-jaxrs-starter-project</h3><p class="ng-binding">Know JAX-RS, but haven't yet dug into Apache TomEE? Way too busy or impatient to read documentation? This example repo is for you.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/sheldon-starter-project/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2935,7 +2935,7 @@ NtpmRD4hYupYW1y7YR5en5KDGumW0JsEk81yIi+Z4HI4dT6OEOMmrVmqYlka
 UcJYooQacDqmTx1P3dKpimXJatdhsmlD5F0idyWedofIO0TaUnJQFcuaehNn
 shkJlavBenEcglF+C4h8Q5MnUBXLmomCeUonERlBBNOh4EqZq4ksIcTIoTWk
 MYJQUFgTqA1CQUEJQkFhGP5fgAEAmEXNRg3xkYYAAAAASUVORK5CYII=
-"></div><h3 class="ng-binding">sheldon-starter-project</h3><p class="ng-binding">This simple starter project will get a running server with Sheldon installed and a sample command to kick off your Java EE &amp; SSH fun!</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/chatterbox"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">sheldon-starter-project</h3><p class="ng-binding">This simple starter project will get a running server with Sheldon installed and a sample command to kick off your Java EE &amp; SSH fun!</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/chatterbox/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAA2hpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -3305,7 +3305,7 @@ MkE8hzSTrNw0V80VbgOpf+GwlXWg4LmFnwYTxCikobTVaJks0wZAGhqO0ZNJ
 OiyfFxq1f4EJwugPaSbLlmeofEm5bBn2oVCHyz4kQg3X3CAThMFg2IIJwmAw
 QRgMJgiDwQRhMJggDAYThMFggjAYTBAGw6z4fwEGAEyIoA0OjbUKAAAAAElF
 TkSuQmCC
-"></div><h3 class="ng-binding">chatterbox</h3><p class="ng-binding">A collection of Java EE Connectors for integration with Email, Slack, Google Chat, Twitter and more.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/microscoped"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">chatterbox</h3><p class="ng-binding">A collection of Java EE Connectors for integration with Email, Slack, Google Chat, Twitter and more.</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/microscoped/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAA2hpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -3773,7 +3773,7 @@ WyiduT4ZBoFSeT2PbSzgnqMBj81LPgMoNC+hXfSPwE8PL0bEIgdlktrRpgWD
 HAEdQQREoTnJEyQ4qqSCM9ddU3DaaVGaYwqtXr7IM/3BbSIisBYo4MtffjpE
 hFNqR0rBNzaAc79srWocG1QoevktGIxIB6c/YDCYIAwGE4TBYIIwGEwQBoMJ
 wmAwQRgMJgiDwQRhMCIQ/y/AABHNFqN1PuA6AAAAAElFTkSuQmCC
-"></div><h3 class="ng-binding">microscoped</h3><p class="ng-binding">A handful of custom CDI Scopes for your hashmap-killing pleasure</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/http-signatures-java"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">microscoped</h3><p class="ng-binding">A handful of custom CDI Scopes for your hashmap-killing pleasure</p></a></article><!-- end ngRepeat: project in projects --><article ng-repeat="project in projects" class="ng-scope"><a href="projects/http-signatures-java/"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -4215,7 +4215,7 @@ UILNJvccnCCaJgm5KwajfIqiNBc0Bemah9IA603gres46NYfxJnQMjikCB66
 o7RDqYdSiuHjRFEjaZWKTEBWIDEu8pbMJ4JwcHBwFYuDgxOEg4MThIODE4SD
 gxOEg4MThIODE4SDgxOEg4MThIODw4z/CzAAcUXzYLLC7lUAAAAASUVORK5C
 YII=
-"></div><h3 class="ng-binding">http-signatures-java</h3><p class="ng-binding">Provides a secure and reliable mechanism to digitally sign a HTTP message which verifies sender identification and message integrity.</p></a></article><!-- end ngRepeat: project in projects --></div></div><div class="icon-sprite_arrow tribe-right"></div></div><a href="projects">see all projects</a></section><section class="tribe-project-highlight ng-scope" ng-controller="ProjectHighlightController"><div class="tribe-background"></div><div class="tribe-project-highlight-content"><div class="tribe-cms"><div class="tribe-title"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"></div><h3 class="ng-binding">http-signatures-java</h3><p class="ng-binding">Provides a secure and reliable mechanism to digitally sign a HTTP message which verifies sender identification and message integrity.</p></a></article><!-- end ngRepeat: project in projects --></div></div><div class="icon-sprite_arrow tribe-right"></div></div><a href="projects/">see all projects</a></section><section class="tribe-project-highlight ng-scope" ng-controller="ProjectHighlightController"><div class="tribe-background"></div><div class="tribe-project-highlight-content"><div class="tribe-cms"><div class="tribe-title"><div><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -4636,7 +4636,7 @@ RK5CYII=
 <div dir="auto">
 <p dir="auto">Simply annotate the parameters of any Java method so it can be invoked from a command-line interface
  with near-zero additional work.  Command-registration, help text and validation is taken care of for you.</p>
-</div></article></div></div><div class="tribe-buttons"><a href="projects/crest">Learn more</a><a href="projects">All projects</a></div></div><div class="tribe-project-highlight-image"><img ng-src="rest/images/project/snapshot/crest.png" src="rest/images/project/snapshot/crest.png"></div></div></section><section class="tribe-os-quotes"><div><div class="tribe-section-separator"></div><h1>HEAR IT DIRECTLY FROM THE SOURCE</h1><p>The community makes Open Source easy and better for developers. Join in on the fun and share your
+</div></article></div></div><div class="tribe-buttons"><a href="projects/crest/">Learn more</a><a href="projects/">All projects</a></div></div><div class="tribe-project-highlight-image"><img ng-src="rest/images/project/snapshot/crest.png" src="rest/images/project/snapshot/crest.png"></div></div></section><section class="tribe-os-quotes"><div><div class="tribe-section-separator"></div><h1>HEAR IT DIRECTLY FROM THE SOURCE</h1><p>The community makes Open Source easy and better for developers. Join in on the fun and share your
 enthusiasm!</p></div><div class="tribe-os-quotes"><article><div><img src="app/images/headshots/sprite_luca-merolla.jpg"></div><h3>Luca Merolla</h3><h4>Merolla Consulting Limited</h4><blockquote>TomEE is really a really value added to our team. We started to play with OpenEJB and Tomcat a
 couple of years ago and in 2012, TomEE, became our reference application server. Community support
 is amazing! Keep up the good work!.</blockquote></article><article><div><img src="app/images/headshots/sprite_jorg-jans.jpg"></div><h3>Jörg Jans</h3><h4>Geyer &amp; Weinig EDV-Unternehmensberatung GmbH</h4><blockquote>Shortly after the release of TomEE 1.0 one of our programmers took a look into it and tried to
@@ -4667,6 +4667,17 @@ implementations of Java EE 6, with Java EE 7 on the horizon.</blockquote></artic
             angular.bootstrap(document, ['tribeio']);
         }).catch(e => {
             //console.error(e);
+            // fixes for static content
+            // docs href fix
+            Array.from(document.querySelectorAll('a[href^="#"]'))
+                .forEach(
+                    (element) => {
+                        const href = element.getAttribute('href');
+                        if (href.startsWith('#')) {
+                                element.setAttribute('href', location.pathname + href);
+                        }
+                    }
+                );
         })
     });
 </script>
