--- a/static/projects/chatterbox/index.html
+++ b/static/projects/chatterbox/index.html
@@ -405,7 +405,7 @@ TkSuQmCC
 </div>
 <div dir="auto">
 <p dir="auto">Code is under the Apache TomEE unbrella and can be found at <a href="https://github.com/apache/tomee-chatterbox">https://github.com/apache/tomee-chatterbox</a></p>
-</div></article></div><div class="tribe-sidebar"><div class="tribe-releases"><h4>releases &amp; documentation</h4><div class="tribe-releases"><table><tbody><tr><th>release</th><th>doc</th></tr><!-- ngRepeat: tag in project.tags --><tr ng-repeat="tag in project.tags" class="ng-scope"><td class="ng-binding">master</td><td><a href="https://github.com/tomitribe/chatterbox/tree/master">ref</a></td></tr><!-- end ngRepeat: tag in project.tags --></tbody></table></div><div class="tribe-separator"><div></div></div><div class="tribe-github-links"><a href="/projects/documentation/chatterbox">doc</a><span>,</span><a href="https://github.com/tomitribe/chatterbox">source code</a><span class="tribe-and">and</span><a href="https://github.com/tomitribe/chatterbox/issues">issue tracker</a></div></div><div class="tribe-content-toc ng-binding ng-hide" ng-bind-html="project.toc" ng-show="project.toc"></div><div class="tribe-contributors"><h4>Cool people that helped make this happen</h4><div class="tribe-contributors-list"><!-- ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/jgallimore/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/548624?v=4" src="https://avatars.githubusercontent.com/u/548624?v=4"></a><!-- end ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/dblevins/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/94926?v=4" src="https://avatars.githubusercontent.com/u/94926?v=4"></a><!-- end ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/jeanouii/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/1233474?v=4" src="https://avatars.githubusercontent.com/u/1233474?v=4"></a><!-- end ngRepeat: contributor in project.contributors --></div></div><div class="tribe-other-projects"><h4>Other projects</h4><!-- ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/crest"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+</div></article></div><div class="tribe-sidebar"><div class="tribe-releases"><h4>releases &amp; documentation</h4><div class="tribe-releases"><table><tbody><tr><th>release</th><th>doc</th></tr><!-- ngRepeat: tag in project.tags --><tr ng-repeat="tag in project.tags" class="ng-scope"><td class="ng-binding">master</td><td><a href="https://github.com/tomitribe/chatterbox/tree/master">ref</a></td></tr><!-- end ngRepeat: tag in project.tags --></tbody></table></div><div class="tribe-separator"><div></div></div><div class="tribe-github-links"><a href="projects/documentation/chatterbox/">doc</a><span>,</span><a href="https://github.com/tomitribe/chatterbox">source code</a><span class="tribe-and">and</span><a href="https://github.com/tomitribe/chatterbox/issues">issue tracker</a></div></div><div class="tribe-content-toc ng-binding ng-hide" ng-bind-html="project.toc" ng-show="project.toc"></div><div class="tribe-contributors"><h4>Cool people that helped make this happen</h4><div class="tribe-contributors-list"><!-- ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/jgallimore/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/548624?v=4" src="https://avatars.githubusercontent.com/u/548624?v=4"></a><!-- end ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/dblevins/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/94926?v=4" src="https://avatars.githubusercontent.com/u/94926?v=4"></a><!-- end ngRepeat: contributor in project.contributors --><a ng-repeat="contributor in project.contributors" href="https://github.com/jeanouii/" class="ng-scope"><img ng-src="https://avatars.githubusercontent.com/u/1233474?v=4" src="https://avatars.githubusercontent.com/u/1233474?v=4"></a><!-- end ngRepeat: contributor in project.contributors --></div></div><div class="tribe-other-projects"><h4>Other projects</h4><!-- ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/crest/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -789,7 +789,7 @@ zB2WCsXfaMjkYCfdVbUJDQl/C0XzJ1qCMty9i8SI4lpmDeLK2oQ6MIWqDEdJ
 T1H6g8yeisX8jB+gaGuzK1x7TBBPIkoLkShSk4w7RGKc5NpigngyUWgt/GzR
 VyFQNpGPPSF7ulsShMHwFPAoFoPBBGEw7MP/CzAARXa/N/Q3vIMAAAAASUVO
 RK5CYII=
-"><div><h4 class="ng-binding">crest</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sheldon"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">crest</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sheldon/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1319,7 +1319,7 @@ NtpmRD4hYupYW1y7YR5en5KDGumW0JsEk81yIi+Z4HI4dT6OEOMmrVmqYlka
 UcJYooQacDqmTx1P3dKpimXJatdhsmlD5F0idyWedofIO0TaUnJQFcuaehNn
 shkJlavBenEcglF+C4h8Q5MnUBXLmomCeUonERlBBNOh4EqZq4ksIcTIoTWk
 MYJQUFgTqA1CQUEJQkFhGP5fgAEAmEXNRg3xkYYAAAAASUVORK5CYII=
-"><div><h4 class="ng-binding">sheldon</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/hodao"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">sheldon</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/hodao/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1483,7 +1483,7 @@ OGO7DlryMNLOcBnUJGrx0nDwHyTj6e2timpIbe0C2nX/Lo2X4MIdbLNihBw7
 9mdq2t6kVTuktzfg/EKREhrCM/pZvofoHYEmQeXUeKyASIXXELq1ug5LHow7
 IbCtD5Hv57Z/T77d0zSRCq+f5k09l6KuDoR70/8EGACsLB9oc97LwgAAAABJ
 RU5ErkJggg==
-"><div><h4 class="ng-binding">hodao</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/beryllium"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">hodao</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/beryllium/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -1803,7 +1803,7 @@ OCgj8yqyNpBJK3JMI7wfMuzkd5ze5JfGImQPYNKZHwEAQB7MDwIABAIAgEAA
 gEAAgEAAgEAAgEAAgEAAgEAAgEAAgEAAgEAAABAIABAIABAIABAIABAIABAI
 ABAIABAIABAIAAACAQACAQACAQACAQACAQACAQACAQACAQACAQACAQCo+X8B
 BgB5SgQqU/qGtAAAAABJRU5ErkJggg==
-"><div><h4 class="ng-binding">beryllium</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sabot"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">beryllium</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sabot/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2235,7 +2235,7 @@ c/uwvFh/q+TA7AgCoQ7yEW4nlhcK/f7F2r+sAYig54T4gcDwQ9xeLC8S+ntk
 Zf8n3QgCSH4WP3qL1xpuN5YXCP28d2W/ryMfU6odcyGuA/oP7CF+jKocVa4V
 Lw4IZ7m7SsVrt3ght+0KAcbO2gdUTz/l403pK1ksa8WAsFgMCIvFgLBYDAiL
 xYCwWC6i/xdgAHsV6nFCLvBTAAAAAElFTkSuQmCC
-"><div><h4 class="ng-binding">sabot</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/swizzle"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">sabot</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/swizzle/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2511,7 +2511,7 @@ tHXrm7Rl8xZqbm4ezG19lcHw3GnMSEfD6llpu3kqknczgFUCitX7O/Km2gJt
 1B6MuTDcJdzngzLxLCUpDCwBLpQlXD7EKeBBv2F9xG4bMxWwYotZi9D3DwIs
 rBpjHQ6VUhrUI1Ucy/AiNFutCj4sFr8iuv0Q65PxrpSiJLUsFuQ+0pdgfsr6
 goohKYulRIlh+X8BBgAehQP1sO+/tAAAAABJRU5ErkJggg==
-"><div><h4 class="ng-binding">swizzle</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/tomee-jaxrs-starter-project"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">swizzle</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/tomee-jaxrs-starter-project/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -2779,7 +2779,7 @@ C/fztUBr3/z/wGBkVRNGljWQlZ2DkLC/FELKAtWcTdDMJ39RpnEFJxjb1kZG
 Zla5nyGKyFIIUaAQohCiQCFEIUSBQohCiALFMSwibibn4eDpJwWeegrz1C9w
 T10hpIyw73g2b/k4WdAUkaVAIUQhREEp4v8CDACU51L83bdKZgAAAABJRU5E
 rkJggg==
-"><div><h4 class="ng-binding">tomee-jaxrs-starter-project</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sheldon-starter-project"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">tomee-jaxrs-starter-project</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/sheldon-starter-project/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -3309,7 +3309,7 @@ NtpmRD4hYupYW1y7YR5en5KDGumW0JsEk81yIi+Z4HI4dT6OEOMmrVmqYlka
 UcJYooQacDqmTx1P3dKpimXJatdhsmlD5F0idyWedofIO0TaUnJQFcuaehNn
 shkJlavBenEcglF+C4h8Q5MnUBXLmomCeUonERlBBNOh4EqZq4ksIcTIoTWk
 MYJQUFgTqA1CQUEJQkFhGP5fgAEAmEXNRg3xkYYAAAAASUVORK5CYII=
-"><div><h4 class="ng-binding">sheldon-starter-project</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/microscoped"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">sheldon-starter-project</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/microscoped/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAA2hpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -3777,7 +3777,7 @@ WyiduT4ZBoFSeT2PbSzgnqMBj81LPgMoNC+hXfSPwE8PL0bEIgdlktrRpgWD
 HAEdQQREoTnJEyQ4qqSCM9ddU3DaaVGaYwqtXr7IM/3BbSIisBYo4MtffjpE
 hFNqR0rBNzaAc79srWocG1QoevktGIxIB6c/YDCYIAwGE4TBYIIwGEwQBoMJ
 wmAwQRgMJgiDwQRhMCIQ/y/AABHNFqN1PuA6AAAAAElFTkSuQmCC
-"><div><h4 class="ng-binding">microscoped</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/http-signatures-java"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
+"><div><h4 class="ng-binding">microscoped</h4></div></a></article><!-- end ngRepeat: project in otherProjects --><article ng-repeat="project in otherProjects" class="ng-scope"><a href="projects/http-signatures-java/"><img ng-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAAGXRFWHRTb2Z0
 d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAyRpVFh0WE1MOmNvbS5hZG9i
 ZS54bXAAAAAAADw/eHBhY2tldCBiZWdpbj0i77u/IiBpZD0iVzVNME1wQ2Vo
 aUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6
@@ -4245,6 +4245,17 @@ YII=
             angular.bootstrap(document, ['tribeio']);
         }).catch(e => {
             //console.error(e);
+            // fixes for static content
+            // docs href fix
+            Array.from(document.querySelectorAll('a[href^="#"]'))
+                .forEach(
+                    (element) => {
+                        const href = element.getAttribute('href');
+                        if (href.startsWith('#')) {
+                                element.setAttribute('href', location.pathname + href);
+                        }
+                    }
+                );
         })
     });
 </script>
