--- a/static/projects/documentation/beryllium/index.html
+++ b/static/projects/documentation/beryllium/index.html
@@ -373,6 +373,17 @@ BgB5SgQqU/qGtAAAAABJRU5ErkJggg==
             angular.bootstrap(document, ['tribeio']);
         }).catch(e => {
             //console.error(e);
+            // fixes for static content
+            // docs href fix
+            Array.from(document.querySelectorAll('a[href^="#"]'))
+                .forEach(
+                    (element) => {
+                        const href = element.getAttribute('href');
+                        if (href.startsWith('#')) {
+                                element.setAttribute('href', location.pathname + href);
+                        }
+                    }
+                );
         })
     });
 </script>
