--- a/static/projects/documentation/microscoped/index.html
+++ b/static/projects/documentation/microscoped/index.html
@@ -521,6 +521,17 @@ wmAwQRgMJgiDwQRhMCIQ/y/AABHNFqN1PuA6AAAAAElFTkSuQmCC
             angular.bootstrap(document, ['tribeio']);
         }).catch(e => {
             //console.error(e);
+            // fixes for static content
+            // docs href fix
+            Array.from(document.querySelectorAll('a[href^="#"]'))
+                .forEach(
+                    (element) => {
+                        const href = element.getAttribute('href');
+                        if (href.startsWith('#')) {
+                                element.setAttribute('href', location.pathname + href);
+                        }
+                    }
+                );
         })
     });
 </script>
